# puppetry-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
puppetry_detector/: __init__.py  detector.py
puppetry_detector/integrations/: rebuff_adapter.py
puppetry_detector/phases/: malicious_detector.py  structure_detector.py
puppetry_detector/rules/: malicious_patterns.py  policy_patterns.py
tests/: test_additional_patterns.py  test_detector.py  test_legitimate_policies.py  test_pattern_variations.py  test_rebuff_integration.py
tests/data/: legitimate_policy_data.py  test_data.py
