[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "puppetry-detector"
version = "0.1.0"
description = "A tool to detect policy puppetry prompt injections against LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Alex Alexapolsky", email = "metawake@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/metawake/puppetry-detector"
Repository = "https://github.com/metawake/puppetry-detector.git"
Issues = "https://github.com/metawake/puppetry-detector/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "rebuff>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["puppetry_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 